# cmd/swag/docs/swagger.json
@@ -18,6 +18,74 @@
     "host": "localhost:8081",
     "basePath": "/v1/2025",
     "paths": {
+        "/properties": {
+            "post": {
+                "description": "Create a new property",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "properties management"
+                ],
+                "summary": "Create a new property",
+                "parameters": [
+                    {
+                        "description": "param",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestDTO.PropertyCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/properties/owner/:id": {
+            "get": {
+                "description": "GetPropertiesByOwnerID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "properties management"
+                ],
+                "summary": "GetPropertiesByOwnerID",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestDTO.PropertyCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/users/create-password": {
             "post": {
                 "description": "Verify OTP",
@@ -184,6 +252,9 @@
                     "type": "string"
                 }
             }
+        },
+        "requestDTO.PropertyCreateRequest": {
+            "type": "object"
         },
         "requestDTO.RegisterRequestModel": {
             "type": "object",
